[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0", "wheel"]

[tool.setuptools]
packages = ["chinchilla"]

[project]
name = 'chinchilla'
version = "0.1.2"
description = "A toolkit for scaling law research"
authors = [{ name = 'Kyo Takano', email = 'kyo.takano@mentalese.co' }]
urls = {Homepage = "https://github.com/kyo-takano/chinchilla"}
readme = "README.md"
license = { file = 'LICENSE' }
requires-python = '>=3.8'
dependencies = [
  "pydantic==2.*",
  "numpy",
  "scipy",
  "rich",
  "seaborn",
  "ruamel.yaml>=0.18.0",
  "attrdictx",
  "ordinal",
]
classifiers = [
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering',
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.ruff]
target-version = "py38"
line-length = 119
ignore = ["C901", "E501"]
extend-include = ["*.ipynb"]

[tool.ruff.format]
skip-magic-trailing-comma = true
